# Laboratorio

./: README.md
Progetto/: CMakeLists.txt  Matrice.h  eccezioneIndice.h  eccezioneMat.h  main.cpp
Progetto/test/: CMakeLists.txt  TestMatrici.cpp  TestOperatori.cpp
